<resources>
    <string name="app_name">Food_Organizer</string>
    <string name="create_profile">Create Profile</string>
    <string name="create_your_profile">Create your Profile</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_username">Set UserName</string>
    <string name="information">I accept all the information given is true</string>
    <string name="gender">Gender</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="already_a_user">Already a User?</string>
    <string name="or">Or</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="add">Add</string>
<<<<<<< HEAD
    <array name="names">
        <item>Onion</item>
        <item>Banana</item>
        <item>Apple</item>
=======
  <array name="names">
      <item>Select Gender</item>
      <item>Male</item>
      <item>Female</item>
      <item>Other</item>
  </array>
    <array name="store">
        <item>Select a Place</item>
        <item>Fridge</item>
        <item>Almirah</item>
        <item>Pantry</item>
        <item>Other</item>
>>>>>>> 4b9b3309f23e412d205c7a94ae53e8ccb02d240d
    </array>

</resources>